force-app/main/default/objects/Innova_ITSC_Task__c/Innova_ITSC_Task__c.object-meta.xml
<CustomObject>
    <description>ITSC Task object is created to track task assigned to Agent from Service request or other modules</description>
    <label>ITSC Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>ITSC Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITSC Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>