force-app/main/default/objects/Innova_ITSC_Task__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <formula>IF(   Innova_IsApproved_c__c  =true, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;),
IF (   Innova_IsRejected_c__c  =true,IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;Red&quot;),
IF ((ISPICKVAL( Innova_Status__c ,&quot;Submitted for Approval&quot;)),IMAGE(&quot;/img/alohaSkin/help_orange.png&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/checkbox_unchecked.gif&quot;, &quot;None&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalStatus</label>
    <type>Text</type>
</CustomField>