force-app/main/default/objects/Innova_ITSC_Task__c/fields/Case_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Title__c</fullName>
    <formula>Innova_Related_Case__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Title</label>
    <type>Text</type>
</CustomField>