force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Innova_Assigned_to_me__c</fullName>
    <formula>IF( OwnerId = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>