force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>