force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Contact_Name_for_Task__c.field-meta.xml
<CustomField>
    <fullName>Innova_Contact_Name_for_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name for Task</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ITSC Tasks</relationshipLabel>
    <relationshipName>ITSC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>