force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Description__c.field-meta.xml
<CustomField>
    <fullName>Innova_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>