force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Innova_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>