force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_FedEx_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Innova_FedEx_Tracking_Number__c</fullName>
    <label>FedEx - Tracking Number</label>
    <type>TextArea</type>
</CustomField>