force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Initial_Password__c.field-meta.xml
<CustomField>
    <fullName>Innova_Initial_Password__c</fullName>
    <label>Initial Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>