force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_IsApproved_c__c.field-meta.xml
<CustomField>
    <fullName>Innova_IsApproved_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>