force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_IsRejected_c__c.field-meta.xml
<CustomField>
    <fullName>Innova_IsRejected_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRejected</label>
    <type>Checkbox</type>
</CustomField>