force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_IT_Approval__c.field-meta.xml
<CustomField>
    <fullName>Innova_IT_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Approval</label>
    <type>Checkbox</type>
</CustomField>