force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Manager__c.field-meta.xml
<CustomField>
    <fullName>Innova_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITSC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>