force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Opened_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>