force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Orientation_Date__c</fullName>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>