force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Innova_Owner_Name__c</fullName>
    <formula>IF(ISBLANK(Owner:Queue.Id),Owner:User.FirstName &amp;&quot;&quot; &amp;Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>