force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Queue_MemberShip__c.field-meta.xml
<CustomField>
    <fullName>Innova_Queue_MemberShip__c</fullName>
    <formula>IF(
OR(
CONTAINS( $User.Innova_Queue_Membership__c , IF(NOT(ISNULL(Owner:Queue.Id)), Owner:Queue.Id, &quot;NULL&quot;)),
CONTAINS($User.Innova_Queue_Membership1__c, IF(NOT(ISNULL(Owner:Queue.Id)), Owner:Queue.Id, &quot;NULL&quot;)),
CONTAINS($User.Inoova_Queue_Membership2__c, IF(NOT(ISNULL(Owner:Queue.Id)), Owner:Queue.Id, &quot;NULL&quot;))
) &amp;&amp; BEGINS(OwnerId, &quot;00G&quot;),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue MemberShip</label>
    <type>Checkbox</type>
</CustomField>