force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Innova_Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field help to keep track of parent case related to task record</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ITSC Tasks</relationshipLabel>
    <relationshipName>ITSC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>