force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Service_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Innova_Service_Request_Details__c</fullName>
    <label>Service Request Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>