force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Subject__c.field-meta.xml
<CustomField>
    <fullName>Innova_Subject__c</fullName>
    <label>Task Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>