force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>Innova_Task_Notes__c</fullName>
    <label>Task Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>