force-app/main/default/objects/Innova_ITSC_Task__c/fields/Innova_Username__c.field-meta.xml
<CustomField>
    <fullName>Innova_Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>