force-app/main/default/objects/Innova_ITSC_Task__c/fields/Previous_Queue__c.field-meta.xml
<CustomField>
    <fullName>Previous_Queue__c</fullName>
    <label>Previous Queue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>