force-app/main/default/objects/Innova_ITSC_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Innova_Subject__c</columns>
    <columns>Innova_Related_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Innova_Owner_Name__c</columns>
    <columns>Innova_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>