force-app/main/default/objects/Innova_ITSC_Task__c/listViews/Application_Support_Booking_Management_Innova_ITSC_Task.listView-meta.xml
<ListView>
    <fullName>Application_Support_Booking_Management_Innova_ITSC_Task</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Application Support - Booking Management</label>
    <queue>Application_Support_Booking_Management</queue>
    <sharedTo>
        <group>Application_Support_Booking_Management</group>
    </sharedTo>
</ListView>