force-app/main/default/objects/Innova_ITSC_Task__c/listViews/Application_Support_GT_DBASupport_Innova_ITSC_Task.listView-meta.xml
<ListView>
    <fullName>Application_Support_GT_DBASupport_Innova_ITSC_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Application Support - GT DBASupport</label>
    <queue>Application_Support_GT_DBASupport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>